// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentModal AppointmentModal should render correctly 1`] = `
<Modal
  afterClose={[MockFunction]}
  title=":  65 Lindsey Close Great Denham"
  visible={true}
>
  <div>
    <H4>
      Time:
    </H4>
    <SubTitleH5>
      18 Dec 2016 04:30 PM - 05:30 PM
    </SubTitleH5>
  </div>
  <div>
    <H4>
      Property:
    </H4>
    <AcLink
      dynamicLinkParams={
        Object {
          "appMode": "DESKTOP",
          "entityCode": undefined,
          "entityType": "properties",
        }
      }
    >
      <SubTitleH5>
        65, Lindsey Close, Great Denham, Bedford, Bedfordshire, MK40 4GT
      </SubTitleH5>
    </AcLink>
  </div>
  <div>
    <H4>
      Viewing Arrangements:
    </H4>
    <SubTitleH5>
      Switch lights on in living room
    </SubTitleH5>
  </div>
</Modal>
`;

exports[`AppointmentModal AppointmentModal should render correctly when loading 1`] = `
<Modal
  afterClose={[MockFunction]}
  title=":  65 Lindsey Close Great Denham"
  visible={true}
>
  <Loader />
</Modal>
`;

exports[`AppointmentModal renderAddress should matchSnapshot 1`] = `
<div>
  <div>
    <H4>
      Property:
    </H4>
    <AcLink
      dynamicLinkParams={
        Object {
          "appMode": "DESKTOP",
          "entityCode": "SOME_ID",
          "entityType": "properties",
        }
      }
    >
      <SubTitleH5>
        65, Lindsey Close, Great Denham, Bedford, Bedfordshire, MK40 4GT
      </SubTitleH5>
    </AcLink>
  </div>
</div>
`;

exports[`AppointmentModal renderCheckMark should match snapshot 1`] = `
<div>
  <TiTick />
</div>
`;

exports[`AppointmentModal renderCommunicationDetail should match snapshot 1`] = `
<div>
  <IconList
    items={
      Array [
        Object {
          "icon": <TiMail
            className="icon-list-icon"
          />,
          "text": <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>,
        },
      ]
    }
  />
</div>
`;

exports[`AppointmentModal renderCommunicationType should match snapshot 1`] = `
<div>
  <TiMail
    className="icon-list-icon"
  />
</div>
`;
